class based forms

--- a/apps/login_reg_app/templates/login_reg_app/index.html
+++ b/apps/login_reg_app/templates/login_reg_app/index.html
@@ -1,7 +1,7 @@
-{% load staticfiles %}
 <!DOCTYPE html>
 <html>
   <head>
+    {% load staticfiles %}
     <meta charset="utf-8">
     <title>Login Registration</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
@@ -17,17 +17,13 @@
     <h2>Register</h2>
     <form action="{% url 'login_app:register' %}" method='post'>
       {% csrf_token %}
-      Name <input type="text" name="name">
-      Username <input type="text" name="username">
-      Password <input type="password" name="password">
-      Confirm PW <input type="password" name="confirm_pw">
+      {{registerform}}
       <input type="submit" value="Register">
     </form>
     <h2>Login</h2>
     <form action="{% url 'login_app:login' %}" method='post'>
       {% csrf_token %}
-      Username <input type="text" name="username">
-      Password <input type="password" name="password">
+      {{loginform.as_p}}
       <input type="submit" value="Login">
     </form>
   </body>
