--- a/apps/login_reg_app/templates/login_reg_app/index.html
+++ b/apps/login_reg_app/templates/login_reg_app/index.html
@@ -7,13 +7,9 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   </head>
   <body>
-    {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
+    {% for user in users %}
+    <p>{{user.first_name}}</p>
+    {% endfor %}
     <h2>Register</h2>
     <form action="{% url 'login_app:register' %}" method='post'>
       {% csrf_token %}
