--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/analysis.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/analysis.html
@@ -1,8 +1,21 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<title>Analysis Page</title>
+	<style rel="stylesheet" type="text/css" href="style/style.css"></style>
+
 </head>
 <body>
-
+	<h3>Analysis Page</h3>
+	<div class='navDiv'>
+		<ul class ='nav'>
+			<li><a href="blueSquirrelsFitnessApp/index.html">Home</a></li>
+			<li><a href="blueSquirrelsFitnessApp/userPage.html">Lifestyle</a></li>
+			<li><a href="blueSquirrelsFitnessApp/analysis.html">Analysis</a></li>
+			<li><a href="blueSquirrelsFitnessApp/community.html">Community</a></li>
+		</ul>
+	</div>
+	<h3>Welcome User</h3>
 </body>
 </html>
