--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/css/bootstrap.css
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/css/bootstrap.css
@@ -8,7 +8,6 @@
  * Designed and built with all the love in the world by @mdo and @fat.
  */
 
-
 .clearfix {
   *zoom: 1;
 }
@@ -225,7 +224,7 @@ textarea {
 body {
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 17px;
   line-height: 20px;
   color: #333333;
   background-color: #ffffff;
@@ -619,6 +618,7 @@ a:focus {
   margin-right: auto;
   margin-left: auto;
   *zoom: 1;
+  height: 100%;
 }
 
 .container:before,
