--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/index.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/index.html
@@ -19,7 +19,8 @@
             <a class="navbar-brand" href="#">The Black Squirrels Fitness Community
           </div>
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">HOME</a></li>
+            <li class="active"><a href="{% url 'fitness_app:index' %}">HOME</a></li>
+            <li><a href="{% url 'fitness_app:index' %}">HOME</a></li>
             <li><a href="{% url 'fitness_app:lifestyle' %}">LIFESTYLE</a></li>
             <li><a href="{% url 'fitness_app:analysis' %}">ANALYSIS</a></li>
             <li><a href="{% url 'fitness_app:community' %}">COMMUNITY</a></li>
