--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/community.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/community.html
@@ -1,8 +1,62 @@
 <html>
 <head>
-	<title></title>
+  <title>Community Page</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
+	<div class="container">
+		<div class="row">
+	      <nav class="navbar navbar-inverse">
+	        <div class="container-fluid">
+	          <div class="navbar-header">
+	            <a class="navbar-brand" href="#">The Black Squirrels Fitness Community
+	          </div>
+	          <ul class="nav navbar-nav">
+	            <li class="active"><a href="">COMMUNITY</a></li>
+	            <li><a href="index.html">HOME</a></li>
+	            <li><a href="lifestyle.html">LIFESTYLE</a></li>
+	            <li><a href="analysis.html">ANALYSIS</a></li>
+	            <li><a href="community.html">COMMUNITY</a></li>
+	            <li><a href="#">LOG OUT</a></li>
+	          </ul>
+	        </div>
+	      </nav>
+	    </div>
+	    <div class="row">
+	    	<h3>COMMUNITY</h3>
+	    </div>
+	    <div class="row">
+	    	<table class="table table-inverse">
+			  <thead>
+			    <tr>
+			      <th>#</th>
+			      <th>FIRST NAME</th>
+			      <th>LAST NAME</th>
+			      <th>FOOD</th>
+			      <th>CALORIES</th>
+			      <th>PROTEIN (g)</th>
+			      <th>TIME</th>
+			    </tr>
+			  </thead>
+			  <tbody>
+			    <tr>
+			      <th scope="row">1</th>
+			      <td>John</td>
+			      <td>Smith</td>
+			      <td>Apple</td>
+			      <td>70</td>
+			      <td>3</td>
+			      <td>9:59 AM November 5, 2016</td>
+			    </tr>
+			  </tbody>
+			</table>
+	    </div>
+    </div>
 </body>
 </html>
