--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
@@ -55,40 +55,21 @@
 		    		</form>
 		    	</div>
 		    </div>
-	    </row>
-	    <div id="row">
-	    	<div class="col-md-12">
-	    		<table class="table table">
-				  <thead>
-				    <tr>
-				      <th>#</th>
-				      <th>Food Name</th>
-				      <th>Calories</th>
-				      <th>Protein(g)</th>
-				    </tr>
-				  </thead>
-				  <tbody>
-				    <tr>
-				      <th scope="row">1</th>
-				      <td>Mark</td>
-				      <td>Otto</td>
-				      <td>@mdo</td>
-				    </tr>
-				    <tr>
-				      <th scope="row">2</th>
-				      <td>Jacob</td>
-				      <td>Thornton</td>
-				      <td>@fat</td>
-				    </tr>
-				    <tr>
-				      <th scope="row">3</th>
-				      <td>Larry</td>
-				      <td>the Bird</td>
-				      <td>@twitter</td>
-				    </tr>
-				  </tbody>
-				</table>
-		    </div>	
+	    </div>
+	    <div class="row">  
+	      <form action="" name="add_food" method="post">
+	        {{quickfood}}
+	        <input type="submit" value="submit"></h3>
+	      </form>
+	    </div>
+	    <div class="row">
+	      <form action="{% url 'fitness_app:quickweight' %}" method="post">
+	        {% csrf_token %}
+	        {{quickweight}}
+	        <input type="submit" value="submit"></h3>
+	      </form>
+	      <h3>Weight: {{user.weight}}</h3>
+	      <h3>{{errors}}</h3>
 	    </div>
 	</div>
 </body>
