--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/analysis.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/analysis.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bootstrap Case</title>
+  <title>Analysis Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -9,6 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   	<div class="container">
