--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
@@ -12,17 +12,28 @@
    		$(document).ready(function() {
    			$(document).on('click', function (){
 	   			$('#btnGetFood').click(function(){
-	   				// var requestData = $('#txtFood').val()
 	   				var resultElement = $('#resultDiv');
+	   				var food_name = $('#foodnameLabel');
+	   				var serving_size = $('#servingsizeLabel');
+	   				var calories = $('#caloriesLabel');
+	   				var carbs = $('#carbsLabel');
+	   				var fats = $('#fatsLabel');
+	   				var protein = $('#proteinLabel');
+	   				var sugar = $('#sugarsLabel');
 	   				$.ajax({
 	   					url: 'https://nutritionix-api.p.mashape.com/v1_1/search/' + $('#txtFood').val() + '?fields=item_name%2Cnf_calories%2Cnf_total_fat%2Cnf_protein%2Cnf_trans_fatty_acid%2Cnf_sugars%2Cnf_servings_per_container%2Cnf_total_carbohydrate',
 	   					method: 'get',
-	   					// data: {fields:requestData},	
 	   					dataType: 'json',
 	   					headers: { "X-Mashape-Key": "ZQdVejWpzXmshdaZtQfKzwtGzxytp1rSizcjsnb1bGwELdPAIB" },
 	   					success: function (data){
 	   						console.log(data.hits[0].fields);
-	   						resultElement.html('Food: ' + data.hits[0].fields.item_name + 'Serving Size: ' + data.hits[0].fields.nf_serving_size_qty + '\n' + 'Calories: ' + data.hits[0].fields.nf_calories + '\n' + 'Carbs: ' + data.hits[0].fields.nf_total_carbohydrate + 'Fats: ' + data.hits[0].fields.nf_total_fat + 'Protein: ' + data.hits[0].fields.nf_protein + 'Sugars: ' + data.hits[0].fields.nf_sugars);
+	   						food_name.html(data.hits[0].fields.item_name);
+	   						serving_size.html(data.hits[0].fields.nf_serving_size_qty);
+	   						calories.html(data.hits[0].fields.nf_calories);
+	   						carbs.html(data.hits[0].fields.nf_total_carbohydrate + " grams");
+	   						fats.html(data.hits[0].fields.nf_total_fat + " grams");
+	   						protein.html(data.hits[0].fields.nf_protein + " grams");
+	   						sugar.html(data.hits[0].fields.nf_sugars + " grams");
 	   					}
 	   				});
 	   			});
@@ -50,30 +61,85 @@
 	      	</nav>
 	    </div>
 	    <div class="row">
-	    	<div class="col-md-6">
-		    	<div id="userAttributes">
-		    		<h3>Jack Rose</h3>
-		    		<h3>Weight: 180 lbs</h3>
-		    		<h3>Height: 5.8</h3>
-		    		<h3>Gender: Male</h3>
-		    		<h3>Age: 45</h3>
-		    	</div>
+	    	<div class="col-md-3">
+		    	<dl class="dl-horizontal">
+  					<dt>First Name</dt><dd>Stephen</dd>
+  					<dt>Last Name</dt><dd>Hack</dd>
+  					<dt>Height</dt><dd>600 cm</dd>
+  					<dt>Age</dt><dd>257</dd>
+  					<dt>Weight</dt><dd>650 lbs</dd>
+  					<dt>Gender</dt><dd>Male</dd>
+				</dl>
 		    </div>
-		    <div class="col-md-6">
-		    	<div id="goalChoice">
-		    		<form action="" method="post">
-
-		    			<ul><h3>Make a Choice!</h3>
-		    				<li><input type="radio" name="goal" value="Lose2">Lose 2 Pounds Per Week!</li>
-		    				<li><input type="radio" name="goal" value="Lose1">Lose 1 Pound Per Week!</li>
-		    				<li><input type="radio" name="goal" value="maintain">Maintain Current Weight!</li>
-		    				<li><input type="radio" name="goal" value="gain1">Gain 1 Pound Per Week!</li>
-		    				<li><input type="radio" name="goal" value="gain2">Gain 2 Pounds Per Week!</il>
-		    			</ul>
-		    		</form>
-		    	</div>
+		    <div class="col-md-9">
+	    		<!-- <form action="" method="post">
+	    			<ul><h3>Make a Choice!</h3>
+	    				<li><input type="radio" name="goal" value="Lose2">Lose 2 Pounds Per Week!</li>
+	    				<li><input type="radio" name="goal" value="Lose1">Lose 1 Pound Per Week!</li>
+	    				<li><input type="radio" name="goal" value="maintain">Maintain Current Weight!</li>
+	    				<li><input type="radio" name="goal" value="gain1">Gain 1 Pound Per Week!</li>
+	    				<li><input type="radio" name="goal" value="gain2">Gain 2 Pounds Per Week!</il>
+	    			</ul>
+	    		</form> -->
+	    		<table class="table table-inverse">
+				  <thead>
+				    <tr>
+				      <th>Lose 2 lbs Per Week</th>
+				      <th>Lose 1 lbs Per Week</th>
+				      <th>Maintain</th>
+				      <th>Gain 1 lbs Per Week</th>
+				      <th>Gain 2 lbs Per Week</th>
+				    </tr>
+				  </thead>
+				  <tbody>
+				    <tr>
+				    	<form action="" method="post">
+					      <td>1200 Calories</td>
+					      <td>1500 Calories</td>
+					      <td>1800 Calories</td>
+					      <td>2100 Calories</td>
+					      <td>2400 Calories</td>
+				    	</form>
+					</tr>
+				  </tbody>
+				</table>
 		    </div>
 	    </div>
+	    <div id="row">
+	    	<div class="col-md-2">
+				<h4>Enter a Food Item</h4>
+				<input type="text" id="txtFood">
+				<input type="button" id="btnGetFood" value="Get Food Data">
+					<div id="resultDiv"></div>
+			</div>
+			<div class="col-md-10">
+				<table class="table">
+				  <thead class="thead-inverse">
+				    <tr>
+				      <th>Food</th>
+				      <th>Serving Size</th>
+				      <th>Calories</th>
+				      <th>Carbs</th>
+				      <th>Fats</th>
+				      <th>Protein</th>
+				      <th>Sugars</th>
+				    </tr>
+				  </thead>
+				  <tbody>
+				    <tr>
+				      <th scope="row"><label id="foodnameLabel">Funnel Cake</label></th>
+				      <td><label id="servingsizeLabel">25 Servings</label></td>
+				      <td><label id="caloriesLabel">5000</label></td>
+				      <td><label id="carbsLabel">700 grams</label></td>
+				      <td><label id="fatsLabel">Obesity Level 1000</label></td>
+				      <td><label id="proteinLabel">500 g</label></td>
+				      <td><label id="sugarsLabel">3 LBS</label></td>
+				    </tr>
+				  </tbody>
+				</table>
+			</div>
+		</div>
+		</div>
 	    <div class="row">  
 	      <form id="food" action="" name="add_food" method="post">
 	        {{quickfood}}
@@ -89,18 +155,7 @@
 	      <h3>Weight: {{user.weight}}</h3>
 	      <h3>{{errors}}</h3>
 	    </div>
-		<div id="row">
-			<table>
-				<tr>
-					<td>Food</td>
-					<td><input type="text" id="txtFood"></td>
-				</tr>
-			</table>
-			<input type="button" id="btnGetFood" value="Get Food Data">
-				<div id="resultDiv">
-
-				</div>
-		</div>
+	
 	</div>
 
 </body>
