--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
@@ -61,6 +61,9 @@
 	      	</nav>
 	    </div>
 	    <div class="row">
+	  			<h3>Lifestyle Page</h3>
+		</div>
+	    <div class="row">
 	    	<div class="col-md-3">
 		    	<dl class="dl-horizontal">
   					<dt>First Name</dt><dd>Stephen</dd>
@@ -72,15 +75,7 @@
 				</dl>
 		    </div>
 		    <div class="col-md-9">
-	    		<!-- <form action="" method="post">
-	    			<ul><h3>Make a Choice!</h3>
-	    				<li><input type="radio" name="goal" value="Lose2">Lose 2 Pounds Per Week!</li>
-	    				<li><input type="radio" name="goal" value="Lose1">Lose 1 Pound Per Week!</li>
-	    				<li><input type="radio" name="goal" value="maintain">Maintain Current Weight!</li>
-	    				<li><input type="radio" name="goal" value="gain1">Gain 1 Pound Per Week!</li>
-	    				<li><input type="radio" name="goal" value="gain2">Gain 2 Pounds Per Week!</il>
-	    			</ul>
-	    		</form> -->
+	    		
 	    		<table class="table table-inverse">
 				  <thead>
 				    <tr>
@@ -94,11 +89,11 @@
 				  <tbody>
 				    <tr>
 				    	<form action="" method="post">
-					      <td>1200 Calories</td>
-					      <td>1500 Calories</td>
-					      <td>1800 Calories</td>
-					      <td>2100 Calories</td>
-					      <td>2400 Calories</td>
+					      <td><input type="radio" name="goal" value="Lose2">1200 Calories</td>
+					      <td><input type="radio" name="goal" value="Lose1">1500 Calories</td>
+					      <td><input type="radio" name="goal" value="maintain">1800 Calories</td>
+					      <td><input type="radio" name="goal" value="gain1">2100 Calories</td>
+					      <td><input type="radio" name="goal" value="gain2">2400 Calories</td>
 				    	</form>
 					</tr>
 				  </tbody>
