--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
@@ -45,30 +45,30 @@
 	<div class="container">
 	    <div class="row">
 	      	<nav class="navbar navbar-inverse">
-	        <div class="container-fluid">
-	          <div class="navbar-header">
-	            <a class="navbar-brand" href="#">The Black Squirrels Fitness Community
-	          </div>
-	          <ul class="nav navbar-nav">
-	            <li class="active"><a href="{% url 'fitness_app:lifestyle' %}">LIFESTYLE</a></li>
-	            <li><a href="{% url 'fitness_app:index' %}">HOME</a></li>
-	            <li><a href="{% url 'fitness_app:lifestyle' %}">LIFESTYLE</a></li>
-	            <li><a href="{% url 'fitness_app:analysis' %}">ANALYSIS</a></li>
-	            <li><a href="{% url 'fitness_app:community' %}">COMMUNITY</a></li>
-	            <li><a href="{% url 'login_app:logout' %}">LOG OUT</a></li>
-	          </ul>
-	        </div>
+	        	<div class="container-fluid">
+	          		<div class="navbar-header">
+	            		<a class="navbar-brand" href="#">The Black Squirrels Fitness Community
+	          		</div>
+	          		<ul class="nav navbar-nav">
+	            		<li class="active"><a href="{% url 'fitness_app:lifestyle' %}">LIFESTYLE</a></li>
+	            		<li><a href="{% url 'fitness_app:index' %}">HOME</a></li>
+	            		<li><a href="{% url 'fitness_app:lifestyle' %}">LIFESTYLE</a></li>
+	            		<li><a href="{% url 'fitness_app:analysis' %}">ANALYSIS</a></li>
+	            		<li><a href="{% url 'fitness_app:community' %}">COMMUNITY</a></li>
+	            		<li><a href="{% url 'login_app:logout' %}">LOG OUT</a></li>
+	          		</ul>
+	        	</div>
 	      	</nav>
 	    </div>
 	    <div class="row">
 	    	<div class="col-md-3">
 		    	<dl class="dl-horizontal">
-  					<dt>First Name</dt><dd>Stephen</dd>
-  					<dt>Last Name</dt><dd>Hack</dd>
-  					<dt>Height</dt><dd>600 cm</dd>
-  					<dt>Age</dt><dd>257</dd>
-  					<dt>Weight</dt><dd>650 lbs</dd>
-  					<dt>Gender</dt><dd>Male</dd>
+  					<dt>First Name</dt><dd>{{user.first_name}}</dd>
+  					<dt>Last Name</dt><dd>{{user.last_name}}</dd>
+  					<dt>Height</dt><dd>{{user.feet}}'{{user.inches}}"</dd>
+  					<dt>Age</dt><dd>{{user.age}}</dd>
+  					<dt>Weight</dt><dd>{{user.weight}} lbs</dd>
+  					<dt>Gender</dt><dd>{{user.gender}}</dd>
 				</dl>
 		    </div>
 		    <div class="col-md-9">
@@ -82,19 +82,19 @@
 	    			</ul>
 	    		</form> -->
 	    		<table class="table table-inverse">
-				  <thead>
-				    <tr>
-				      <th>Lose 2 lbs Per Week</th>
-				      <th>Lose 1 lbs Per Week</th>
-				      <th>Maintain</th>
-				      <th>Gain 1 lbs Per Week</th>
-				      <th>Gain 2 lbs Per Week</th>
-				    </tr>
-				  </thead>
-				  <tbody>
-				    <tr>
-				    	<form action="" method="post">
-					      <td>1200 Calories</td>
+					<thead>
+						<tr>
+				    		<th>Lose 2 lbs Per Week</th>
+				    		<th>Lose 1 lbs Per Week</th>
+				    		<th>Maintain</th>
+				    		<th>Gain 1 lbs Per Week</th>
+				    		<th>Gain 2 lbs Per Week</th>
+				    	</tr>
+					</thead>
+					<tbody>
+				    	<tr>
+				    		<form action="" method="post">
+					    		<td>1200 Calories</td>
 					      <td>1500 Calories</td>
 					      <td>1800 Calories</td>
 					      <td>2100 Calories</td>
@@ -140,20 +140,12 @@
 			</div>
 		</div>
 		</div>
-	    <div class="row">  
-	      <form id="food" action="" name="add_food" method="post">
-	        {{quickfood}}
-	        <input type="submit" value="submit"></h3>
-	      </form>
-	    </div>
 	    <div class="row">
 	      <form action="{% url 'fitness_app:quickweight' %}" method="post">
 	        {% csrf_token %}
 	        {{quickweight}}
 	        <input type="submit" value="submit"></h3>
 	      </form>
-	      <h3>Weight: {{user.weight}}</h3>
-	      <h3>{{errors}}</h3>
 	    </div>
 	
 	</div>
