--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
@@ -72,10 +72,32 @@
   					<dt>Age</dt><dd>{{user.age}}</dd>
   					<dt>Weight</dt><dd>{{user.weight}} lbs</dd>
   					<dt>Gender</dt><dd>{{user.gender}}</dd>
+  					<dt>Activity Level</dt><dd>{{user.activity_level}}</dd>
+  					<dt>BMR</dt><dd>{{bmr}}</dd>
 				</dl>
 		    </div>
 		    <div class="col-md-9">
 	    		<table class="table table-inverse">
+					<thead>
+				    	<tr>
+					    	<th>Sedentary</th>
+					    	<th>Lightly Active (exercise 1-3 days/week)</th>
+					    	<th>Moderatetely Active (moderate exercise/sports 3-5 days/week)</th>
+					    	<th>Very Active (hard exercise/sports 6-7 days a week)</th>
+					    	<th>Extra Active (very hard exercise/sports and physical job or 2x training)</th>
+				    	</tr>
+					</thead>
+				  	<tbody>
+				  		<tr>
+				    		<td>{{sedentary}}</td>
+				      		<td>{{light}}</td>
+				      		<td>{{moderate}}</td>
+				      		<td>{{very}}</td>
+				      		<td>{{extreme}}</td>
+						</tr>
+				  	</tbody>
+				</table>
+				<table class="table table-inverse">
 					<thead>
 				    	<tr>
 					    	<th>Lose 2 lbs Per Week</th>
@@ -89,7 +111,8 @@
 				  		<tr>
 				    		<form action="" method="post">
 				    			{% csrf_token %}
-					    		<td><input type="radio" name="goal" value="Lose2">1200 Calories</td>
+
+					    		<td><input type="radio" name="goal" value="Lose2"></td>
 					      		<td><input type="radio" name="goal" value="Lose1">1500 Calories</td>
 					      		<td><input type="radio" name="goal" value="maintain">1800 Calories</td>
 					      		<td><input type="radio" name="goal" value="gain1">2100 Calories</td>
@@ -101,13 +124,13 @@
 		    </div>
 	    </div>
 	    <div id="row">
-	    	<div class="col-md-2">
+	    	<div class="col-md-3">
 				<h4>Enter a Food Item</h4>
 				<input type="text" id="txtFood">
 				<input type="button" id="btnGetFood" value="Get Food Data">
 					<div id="resultDiv"></div>
 			</div>
-			<div class="col-md-10">
+			<div class="col-md-9">
 				<table class="table">
 				  <thead class="thead-inverse">
 				    <tr>
