--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/analysis.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/analysis.html
@@ -1,72 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Analysis Page</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
- <link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>Analysis Page</title>
+  	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   	<div class="container">
 	    <div class="row">
 	      	<nav class="navbar navbar-inverse">
-	        <div class="container-fluid">
-	          <div class="navbar-header">
-	            <a class="navbar-brand" href="#">The Black Squirrels Fitness Community
-	          </div>
-	          <ul class="nav navbar-nav">
-	            <li class="active"><a href="{% url 'fitness_app:analysis' %}">ANALYSIS</a></li>
-	            <li><a href="{% url 'fitness_app:index' %}">HOME</a></li>
-	            <li><a href="{% url 'fitness_app:lifestyle' %}">LIFESTYLE</a></li>
-	            <li><a href="{% url 'fitness_app:analysis' %}">ANALYSIS</a></li>
-	            <li><a href="{% url 'fitness_app:community' %}">COMMUNITY</a></li>
-	            <li><a href="{% url 'login_app:logout' %}">LOG OUT</a></li>
-	          </ul>
-	        </div>
+	        	<div class="container-fluid">
+	          		<div class="navbar-header">
+	            		<a class="navbar-brand" href="#">The Black Squirrels Fitness Community</a>
+	          		</div>
+	          		<ul class="nav navbar-nav">
+	            		<li class="active"><a href="{% url 'fitness_app:analysis' %}">ANALYSIS</a></li>
+			            <li><a href="{% url 'fitness_app:index' %}">HOME</a></li>
+			            <li><a href="{% url 'fitness_app:lifestyle' %}">LIFESTYLE</a></li>
+			            <li><a href="{% url 'fitness_app:analysis' %}">ANALYSIS</a></li>
+			            <li><a href="{% url 'fitness_app:community' %}">COMMUNITY</a></li>
+			            <li><a href="{% url 'login_app:logout' %}">LOG OUT</a></li>
+	          		</ul>
+	        	</div>
 	      	</nav>
 	    </div>
-	    <!-- <div class="row"> -->
+	    <div class="row">
 	    	<div id="myCarousel" class="carousel slide" data-ride="carousel">
 	    		 <!-- Indicators -->
-				  <ol class="carousel-indicators">
-				    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				<ol class="carousel-indicators">
+					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 				    <li data-target="#myCarousel" data-slide-to="1"></li>
 				    <li data-target="#myCarousel" data-slide-to="2"></li>
 				    <li data-target="#myCarousel" data-slide-to="3"></li>
-				  </ol>
+				</ol>
 
 			  <!-- Wrapper for slides -->
-			 	 <div class="carousel-inner" role="listbox">
+			 	<div class="carousel-inner" role="listbox">
 				    <div class="item active">
-				      <img src="img/cat1.jpeg" alt="Chania">
+				      	<img src="img/cat1.jpeg" alt="Chania">
 				    </div>
 
 				    <div class="item">
-				      <img src="img/cat2.jpg" alt="Chania">
+				      	<img src="img/cat2.jpg" alt="Chania">
 				    </div>
 
 				    <div class="item">
-				      <img src="img/cat3.jpg" alt="Flower">
+				      	<img src="img/cat3.jpg" alt="Flower">
 				    </div>
-			  	 </div>
+			  	</div>
 
 			  <!-- Left and right controls -->
-			  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-			    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-			    <span class="sr-only">Previous</span>
-			  </a>
-			  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-			    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			    <span class="sr-only">Next</span>
-			  </a>
+			  	<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+			    	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			    	<span class="sr-only">Previous</span>
+			  	</a>
+			  	<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+			    	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			    	<span class="sr-only">Next</span>
+			  	</a>
 			</div>
-
-	   <!--  </div> -->
+	   	</div>
   	</div>
 </body>
 </html>
