--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/index.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/index.html
@@ -1,84 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Home Page</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <title>Home Page</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <div class="container">
-    <div class="row">
-      <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#">The Black Squirrels Fitness Community
-          </div>
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'fitness_app:index' %}">HOME</a></li>
-            <li><a href="{% url 'fitness_app:index' %}">HOME</a></li>
-            <li><a href="{% url 'fitness_app:lifestyle' %}">LIFESTYLE</a></li>
-            <li><a href="{% url 'fitness_app:analysis' %}">ANALYSIS</a></li>
-            <li><a href="{% url 'fitness_app:community' %}">COMMUNITY</a></li>
-            <li><a href="{% url 'login_app:logout' %}">LOG OUT</a></li>
-          </ul>
+    <div class="container">
+        <div class="row">
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">The Black Squirrels Fitness Community</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="{% url 'fitness_app:index' %}">HOME</a></li>
+                        <li><a href="{% url 'fitness_app:index' %}">HOME</a></li>
+                        <li><a href="{% url 'fitness_app:lifestyle' %}">LIFESTYLE</a></li>
+                        <li><a href="{% url 'fitness_app:analysis' %}">ANALYSIS</a></li>
+                        <li><a href="{% url 'fitness_app:community' %}">COMMUNITY</a></li>
+                        <li><a href="{% url 'login_app:logout' %}">LOG OUT</a></li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-      </nav>
-    </div>
-    <div class = "row">
-      <h2>Welcome, {{user.first_name}}!</h2>
-    </div>
-    <div class="row">
-      <div class=".col-md-6">
-        <h3>X Calories Consumed Today</h3>
-        <h3>X Calories To Go</h3>
-      </div>
-      <div class=".col-md-6">
-        <div class="progress">
-          <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-          </div>
+        <div class = "row">
+            <h2>Welcome, {{user.first_name}}!</h2>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class=".col-md-6">
-        <h3>X Grams of Protein Consumed Today</h3>
-        <h3>X Grams To Go</h3>
-      </div>
-      <div class=".col-md-6">
-        <div class="progress">
-          <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-          </div>
+        <div class="row">
+            <div class=".col-md-6">
+                <h3>X Calories Consumed Today</h3>
+                <h3>X Calories To Go</h3>
+            </div>
+            <div class=".col-md-6">
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+    <div class="row">
+        <div class=".col-md-6">
+            <h3>X Grams of Protein Consumed Today</h3>
+            <h3>X Grams To Go</h3>
+        </div>
+        <div class=".col-md-6">
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                </div>
+            </div>
+        </div>
     </div>
-     <div id="row">
-        <div class="col-md-12">
-            <table class="table table">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>Food</th>
-                <th>Calories</th>
-                <th>Protein(g)</th>
-                <th>Time</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                  <th scope="row">1</th>
-                  <td>Apple</td>
-                  <td>70</td>
-                  <td>2</td>
-                  <td>9:59 AM November 5, 2016</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>  
-      </div>
-  </div>
+        <div id="row">
+            <div class="col-md-12">
+                <table class="table table">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Food</th>
+                            <th>Calories</th>
+                            <th>Protein(g)</th>
+                            <th>Time</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Apple</td>
+                            <td>70</td>
+                            <td>2</td>
+                            <td>9:59 AM November 5, 2016</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
 
