--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
@@ -12,7 +12,6 @@
    		$(document).ready(function() {
    			$(document).on('click', function (){
 	   			$('#btnGetFood').click(function(){
-	   				var resultElement = $('#resultDiv');
 	   				var food_name = $('#foodnameLabel');
 	   				var serving_size = $('#servingsizeLabel');
 	   				var calories = $('#caloriesLabel');
@@ -20,6 +19,7 @@
 	   				var fats = $('#fatsLabel');
 	   				var protein = $('#proteinLabel');
 	   				var sugar = $('#sugarsLabel');
+	   				var tie = $('#tiefood');
 	   				$.ajax({
 	   					url: 'https://nutritionix-api.p.mashape.com/v1_1/search/' + $('#txtFood').val() + '?fields=item_name%2Cnf_calories%2Cnf_total_fat%2Cnf_protein%2Cnf_trans_fatty_acid%2Cnf_sugars%2Cnf_servings_per_container%2Cnf_total_carbohydrate',
 	   					method: 'get',
@@ -33,6 +33,7 @@
 	   						fats.html(data.hits[0].fields.nf_total_fat + " grams");
 	   						protein.html(data.hits[0].fields.nf_protein + " grams");
 	   						sugar.html(data.hits[0].fields.nf_sugars + " grams");
+	   						tie.val("Add " + $('#txtFood').val())
 	   					}
 	   				});
 	   			});
@@ -125,12 +126,8 @@
 	    <div id="row">
 	    	<div class="col-md-3">
 				<h4>Enter a Food Item</h4>
-
-
-					<input type="text" id="txtFood" name="foodname">
-					<input type="submit" id="btnGetFood" name="test" value="Get Food Data">
-
-				<div id="resultDiv"></div>
+				<input type="text" id="txtFood" name="foodname">
+				<input type="submit" id="btnGetFood" name="test" value="Get Food Data">
 			</div>
 			<div class="col-md-9">
 				<table class="table">
@@ -155,7 +152,7 @@
 				      		<td id="fatsLabel"><span style="font-style: italic;">Obesity Level 1000</span></td>
 				      		<td id="proteinLabel"><span style="font-style: italic;">500 g</span></td>
 				      		<td id="sugarsLabel"><span style="font-style: italic;">3 LBS</span></td>
-				      		<td><form action="{% url 'fitness_app:addfood' %}"><input type="submit" value="Add"></form></td>
+				      		<td><form action="{% url 'fitness_app:addfood' %}" method="post">{% csrf_token %}<input id="tiefood" name="add" type="submit" value="Add"></form></td>
 				    	</tr>
 				  	</tbody>
 				</table>
@@ -167,6 +164,11 @@
 	        	{{quickweight}}
 	        	<input type="submit" value="submit"></h3>
 	    	</form>
+	    </div>
+	    <div class="row">
+	    	{% for food in yourfoods %}
+	    	<p>{{food.food}}</p>
+	    	{% endfor %}
 	    </div>
 	</div>
 </body>
