--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/index.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/index.html
@@ -67,6 +67,7 @@
                         </tr>
                     </thead>
                     <tbody>
+                        {{for }}
                         <tr>
                             <th scope="row">1</th>
                             <td>Apple</td>
