--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
@@ -182,7 +182,7 @@
 	    </div>
 	    <div class="row">
 	    	{% for food in yourfoods %}
-	    	<p>{{food.food}}</p>
+	    	<p>{{food.calories}}</p>
 	    	{% endfor %}
 	    </div>
 	</div>
