user attrs display user friendly activity levels and goals

--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/index.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/index.html
@@ -29,6 +29,7 @@
         </div>
         <div class = "row">
             <h2>Welcome, {{user.created_at}}! Today you should eat {{daily}} calories! You have already eaten {{sofar}}!</h2>
+            <h1>{{errors}}</h1>
         </div>
         <div class="row">
             <div class=".col-md-6">
