--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/analysis.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/analysis.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>Analysis Page</title>
+		{% load static %}
   	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
- 	<link rel="stylesheet" type="text/css" href="css/style.css">
+ 	<link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 </head>
 <body>
   	<div class="container">
@@ -41,15 +42,15 @@
 			  <!-- Wrapper for slides -->
 			 	<div class="carousel-inner" role="listbox">
 				    <div class="item active">
-				      	<img src="img/cat1.jpeg" alt="Chania">
+				      	<img src="{% static 'img/cat1.jpeg' %}" alt="Chania">
 				    </div>
 
 				    <div class="item">
-				      	<img src="img/cat2.jpg" alt="Chania">
+				      	<img src="{% static 'img/cat2.jpg' %}" alt="Chania">
 				    </div>
 
 				    <div class="item">
-				      	<img src="img/cat3.jpg" alt="Flower">
+				      	<img src="{% static 'img/cat3.jpg' %}" alt="Flower">
 				    </div>
 			  	</div>
 
