--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/bootstrap/lifestyle.html
@@ -62,7 +62,7 @@
 	      	</nav>
 	    </div>
 	    <div class="row">
-	    	<h2 class='text-center'>Lifestyle Page</h2>
+	    	<h2 class='text-center' style='margin-bottom: 35px;'>Lifestyle Page</h2>
 	    	<div class="col-md-4">
 	    		<h4 class='text-center'>User Attributes</h4>
 		    	<dl class="dl-horizontal">
