--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/community.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/community.html
@@ -22,7 +22,6 @@
 			            <li><a href="{% url 'fitness_app:index' %}">HOME</a></li>
 			            <li><a href="{% url 'fitness_app:lifestyle' %}">LIFESTYLE</a></li>
 			            <li><a href="{% url 'fitness_app:analysis' %}">ANALYSIS</a></li>
-			            <li><a href="{% url 'fitness_app:community' %}">COMMUNITY</a></li>
 			            <li><a href="{% url 'login_app:logout' %}">LOG OUT</a></li>
 	          		</ul>
 	        	</div>
@@ -54,6 +53,9 @@
 				      	<td>{{food.calories}}</td>
 				      	<td>{{food.protein}}</td>
 				      	<td>{{food.created_at}}</td>
+				      	{% if food.user == user %}
+				      	<td><form action="{% url 'fitness_app:removefoodcomm' id=food.id %}" method="post">{% csrf_token %}<input type="submit" value="Remove"></form></td>
+				      	{% endif %}
 			    	</tr>
 			    	{% endfor %}
 			  	</tbody>
